test/syntax/fail/lexer/char/empty_char.expected
File "dummy.sync", line 1, character 13:
 1 | let f x = ''
                 ^

Error: Character literal cannot be empty.
